--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ hello my dear team welcome to this project
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My web page</title>
+        <title>Hello welcome to my project</title>
     </head>
     <body>
         <h1>Hello, world!</h1>
