--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 hello my dear team welcome to this project
 
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Welcome to Nginx</title>
+    <style>
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 100px;
+        }
+        h1 {
+            color: #2e8b57;
+        }
+        p {
+            font-size: 18px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to My Nginx Web Page!</h1>
+    <p>This page is served using Nginx on a Linux server.</p>
+</body>
+</html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Hello welcome to my project01 for fresher</title>
